--- a/index-components.html
+++ b/index-components.html
@@ -20,222 +20,43 @@
             <!--Card-->
             <div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-slate-800 dark:border-gray-700 mx-4 my-5">
                 <div class="p-5">
-                    <a href="#alerts" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="notifications-outline"></ion-icon>Alerts</a>
+                    <a href="components/alerts.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="notifications-outline"></ion-icon>Alerts</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
-                    <a href="" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="radio-button-on-outline"></ion-icon>Buttons</a>
+                    <a href="components/buttons.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="radio-button-on-outline"></ion-icon>Buttons</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
-                    <a href="" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="person-circle-outline"></ion-icon>Heading</a>
+                    <a href="components/forms.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="person-circle-outline"></ion-icon>Forms</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="albums-outline"></ion-icon>Cards</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="create-outline"></ion-icon>Tables</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
+                    <a href="components/upload-flies.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="document-outline"></ion-icon>Upload Files</a>
+                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                 </div>
             </div>
 
-<!--ALERT-->
-<div id="alerts" class="text-xs ml-4 mt-5 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</div>
-<div class="text-4xl ml-4 mt-0 font-bold dark:text-white">Alerts</div>
-
-<div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
-    <div class="container">
-        <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-            <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Alerts</div>
-            <div class="w-full">
-                <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md border border-blue-200" role="alert">
-                    This is a nice notification!
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-gray-100 text-gray-900 rounded-md text-sm border border-gray-200" role="alert">
-                    This is a nice notification!
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-green-100 text-green-900 text-sm rounded-md border border-green-200" role="alert">
-                    This is a nice notification!
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-red-100 text-red-900 text-sm rounded-md border border-red-200" role="alert">
-                    This is a nice notification!
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-yellow-100 text-yellow-900 text-sm rounded-md border border-yellow-200" role="alert">
-                    This is a nice notification!
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-purple-100 text-purple-900 text-sm rounded-md border border-purple-200" role="alert">
-                    This is a nice notification!
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-gray-300 text-gray-900 rounded-md text-sm border border-gray-400" role="alert">
-                    This is a nice notification!
-                </div>
-            </div>
-        </div>
-
-        <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5" role="alert">
-            <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Alerts with title</div>
-            <div class="w-full">
-                <div class="mb-4 bg-blue-100 text-blue-900 rounded-md border border-blue-200 flex flex-col">
-                    <div class="py-2 px-5 border-b border-blue-200 text-sm font-bold shadow-lg">
-                        Yo!
-                    </div>
-                    <div class="py-2 px-5 text-sm">
-                        This notification has the title!
-                    </div>
-                </div>
-
-                <div class="mb-4 bg-gray-100 text-gray-900 rounded-md border border-gray-200 flex flex-col" role="alert">
-                    <div class="py-2 px-5 border-b border-gray-200 text-sm font-bold shadow-lg">
-                        Yo!
-                    </div>
-                    <div class="py-2 px-5 text-sm">
-                        This notification has the title!
-                    </div>
-                </div>
-
-                <div class="mb-4 bg-green-100 text-green-900 rounded-md border border-green-200 flex flex-col" role="alert">
-                    <div class="py-2 px-5 border-b border-green-200 text-sm font-bold shadow-md">
-                        Yo!
-                    </div>
-                    <div class="py-2 px-5 text-sm">
-                        This notification has the title!
-                    </div>
-                </div>
-
-                <div class="mb-4 bg-red-100 text-red-900 rounded-md border border-red-200 flex flex-col" role="alert">
-                    <div class="py-2 px-5 border-b border-red-200 text-sm font-bold shadow-lg">
-                        Yo!
-                    </div>
-                    <div class="py-2 px-5 text-sm">
-                        This notification has the title!
-                    </div>
-                </div>
-
-                <div class="mb-4 bg-yellow-100 text-yellow-900 rounded-md border border-yellow-200 flex flex-col" role="alert">
-                    <div class="py-2 px-5 border-b border-yellow-200 text-sm font-bold shadow-lg">
-                        Yo!
-                    </div>
-                    <div class="py-2 px-5 text-sm">
-                        This notification has the title!
-                    </div>
-                </div>
-
-                <div class="mb-4 bg-purple-100 text-purple-900 rounded-md border border-purple-200 flex flex-col" role="alert">
-                    <div class="py-2 px-5 border-b border-purple-200 text-sm font-bold shadow-lg">
-                        Yo!
-                    </div>
-                    <div class="py-2 px-5 text-sm">
-                        This notification has the title!
-                    </div>
-                </div>
-
-                <div class="mb-4 bg-gray-300 text-gray-900 rounded-md border border-gray-400 flex flex-col" role="alert">
-                    <div class="py-2 px-5 border-b border-gray-400 text-sm font-bold shadow-lg">
-                        Yo!
-                    </div>
-                    <div class="py-2 px-5 text-sm">
-                        This notice has the title!
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-            <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Closing Notifications</div>
-            <div class="w-full">
-                <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md border border-blue-200 flex items-center justify-between" role="alert">
-                    <span>Looks like a notification to close!</span>
-                    <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-gray-100 text-gray-900 rounded-md text-sm border border-gray-200 flex items-center justify-between" role="alert">
-                    <span>Looks like a notification to close!</span>
-                    <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-green-100 text-green-900 text-sm rounded-md border border-green-200 flex items-center justify-between" role="alert">
-                    <span>Looks like a notification to close!</span>
-                    <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-red-100 text-red-900 text-sm rounded-md border border-red-200 flex items-center justify-between" role="alert">
-                    <span>Looks like a notification to close!</span>
-                    <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-yellow-100 text-yellow-900 text-sm rounded-md border border-yellow-200 flex items-center justify-between" role="alert">
-                    <span>Looks like a notification to close!</span>
-                    <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-purple-100 text-purple-900 text-sm rounded-md border border-purple-200 flex items-center justify-between" role="alert">
-                    <span>Looks like a notification to close!</span>
-                    <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-
-                <div class="py-3 px-5 mb-4 bg-gray-300 text-gray-900 rounded-md text-sm border border-gray-400 flex items-center justify-between" role="alert">
-                    <span>Looks like a notification to close!</span>
-                    <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-            </div>
-        </div>
-
-    </div>
-</div>
-    
     <!--Footer Navigation Bar-->
     <div class="w-full h-screen">
         <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
-                <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-wigets block text-xs">Wigets</span>
                 </a>
-                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-pages block text-xs">Pages</span>
                 </a>
-                <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="home"></ion-icon>
                     <span class="tab tab-home block text-xs">Home</span>
                 </a>
                 <a href="#" onclick="openModal()"
-                class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class="tab tab-theme block text-xs">Theme</span>
                 </a>
-                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="search"></ion-icon>
                     <span class="tab tab-search block text-xs">Search</span>
                 </a>
