--- a/index-components.html
+++ b/index-components.html
@@ -24,16 +24,164 @@
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/buttons.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="radio-button-on-outline"></ion-icon>Buttons</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
-                    <a href="components/forms.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="person-circle-outline"></ion-icon>Forms</a>
-                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="albums-outline"></ion-icon>Cards</a>
+                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
+                    <a href="components/forms.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="person-circle-outline"></ion-icon>Forms</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/tables.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="create-outline"></ion-icon>Tables</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                     <a href="components/upload-flies.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="document-outline"></ion-icon>Upload Files</a>
                     <hr class="bg-slate-500 dark:bg-slate-800 my-2">
+                    <a href="components/dropdowns.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="caret-down-outline"></ion-icon>Dropdowns</a>
+                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
+                    <a href="components/toggle.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="toggle-outline"></ion-icon>Toggles</a>
+                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
+                    <a href="components/back-to-top.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="arrow-up-outline"></ion-icon>Back to Top</a>
+                    <hr class="bg-slate-500 dark:bg-slate-800 my-2">
                 </div>
             </div>
+
+
+
+
+            <!--Theme modal window-->
+
+    <!--Styles for theme modal-->
+    <style>
+		.animated {
+			-webkit-animation-duration: 1s;
+			animation-duration: 1s;
+			-webkit-animation-fill-mode: both;
+			animation-fill-mode: both;
+		}
+
+		.animated.faster {
+			-webkit-animation-duration: 500ms;
+			animation-duration: 500ms;
+		}
+
+		.fadeIn {
+			-webkit-animation-name: fadeIn;
+			animation-name: fadeIn;
+		}
+
+		.fadeOut {
+			-webkit-animation-name: fadeOut;
+			animation-name: fadeOut;
+		}
+
+		@keyframes fadeIn {
+			from {
+				opacity: 0;
+			}
+			to {
+				opacity: 1;
+			}
+		}
+
+		@keyframes fadeOut {
+			from {
+				opacity: 1;
+			}
+			to {
+				opacity: 0;
+			}
+		}
+	</style>
+
+    <!--Modal-->
+	<div class="bottom main-modal fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center animated fadeIn faster"
+		style="background: rgba(0,0,0,.6);">
+		<div
+			class="border border-slate-700 modal-container bg-slate-200 dark:bg-slate-800 w-11/12 md:max-w-md mx-auto rounded-xl shadow-lg z-50 overflow-y-auto">
+			<div class="modal-content py-4 text-left px-6 bottom-4">
+				<!--Title-->
+				<div class="flex justify-between items-center pb-3">
+					<p class="text-2xl font-bold text-black dark:text-white">Theme</p>
+					<div class="modal-close cursor-pointer z-50">
+						<svg class="fill-current text-black dark:text-gray-600" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+							viewBox="0 0 18 18">
+							<path
+								d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
+							</path>
+						</svg>
+					</div>
+				</div>
+
+
+                <style>
+
+                    input:checked ~ .dot {
+                    transform: translateX(100%);
+                    /* background-color: #132b50; */
+                    }
+                </style>
+                <div class="flex flex-row justify-between toggle">
+                    <label for="dark-toggle" class="flex items-center cursor-pointer">
+                        <div class="relative">
+                        <input type="checkbox" name="dark-mode" id="dark-toggle" class="checkbox hidden">
+                        <div class="block border-[1px] dark:border-white border-gray-900 w-14 h-8 rounded-full"></div>
+                        <div class="dot absolute left-1 top-1 dark:bg-white bg-gray-800 w-6 h-6 rounded-full transition"></div>
+                        </div>
+                        <div class="ml-3 dark:text-white text-gray-900 font-medium">
+                        Dark Mode
+                        </div>
+                    </label>
+                    </div>
+                </div>
+                <script>
+                tailwind.config = {
+                darkMode: 'class',
+                }
+                </script>
+                <script>
+                if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+                document.documentElement.classList.add('dark')
+                } else {
+                document.documentElement.classList.remove('dark')
+                }
+                function darkModeListener() {
+                document.querySelector("html").classList.toggle("dark");
+                }
+                
+                document.querySelector("input[type='checkbox']#dark-toggle").addEventListener("click", darkModeListener);
+                
+                </script>
+
+
+			</div>
+		</div>
+	</div>
+
+        <!--Script for modal window-->
+	<script>
+
+		const modal = document.querySelector('.main-modal');
+		const closeButton = document.querySelectorAll('.modal-close');
+
+		const modalClose = () => {
+			modal.classList.remove('fadeIn');
+			modal.classList.add('fadeOut');
+			setTimeout(() => {
+				modal.style.display = 'none';
+			}, 500);
+		}
+
+		const openModal = () => {
+			modal.classList.remove('fadeOut');
+			modal.classList.add('fadeIn');
+			modal.style.display = 'flex';
+		}
+
+		for (let i = 0; i < closeButton.length; i++) {
+			const elements = closeButton[i];
+			elements.onclick = (e) => modalClose();
+			modal.style.display = 'none';
+			window.onclick = function (event) {
+				if (event.target == modal) modalClose();
+			}
+		}
+    </script>
 
     <!--Footer Navigation Bar-->
     <div class="w-full h-screen">
