--- a/index-search.html
+++ b/index-search.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-<!--Theme modal window-->
+            <!--Theme modal window-->
 
     <!--Styles for theme modal-->
     <style>
@@ -89,13 +89,13 @@
 	</style>
 
     <!--Modal-->
-	<div class="main-modal fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center animated fadeIn faster"
-		style="background: rgba(0,0,0,.2);">
+	<div class="bottom main-modal fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center animated fadeIn faster"
+		style="background: rgba(0,0,0,.6);">
 		<div
 			class="border border-slate-700 modal-container bg-slate-200 dark:bg-slate-800 w-11/12 md:max-w-md mx-auto rounded-xl shadow-lg z-50 overflow-y-auto">
 			<div class="modal-content py-4 text-left px-6 bottom-4">
 				<!--Title-->
-				<div class="flex justify-between items-center pb-3 border-b dark:border-gray-600">
+				<div class="flex justify-between items-center pb-3">
 					<p class="text-2xl font-bold text-black dark:text-white">Theme</p>
 					<div class="modal-close cursor-pointer z-50">
 						<svg class="fill-current text-black dark:text-gray-600" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -106,16 +106,53 @@
 						</svg>
 					</div>
 				</div>
-				    <!-- Modal body -->
-                    <div class="p-6 grid grid-cols-2">
-                    <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Ligth</button>
-                    <button type="button" class="text-gray-900 hover:text-white border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800">Dark</button>
+
+
+                <style>
+
+                    input:checked ~ .dot {
+                    transform: translateX(100%);
+                    /* background-color: #132b50; */
+                    }
+                </style>
+                <div class="flex flex-row justify-between toggle">
+                    <label for="dark-toggle" class="flex items-center cursor-pointer">
+                        <div class="relative">
+                        <input type="checkbox" name="dark-mode" id="dark-toggle" class="checkbox hidden">
+                        <div class="block border-[1px] dark:border-white border-gray-900 w-14 h-8 rounded-full"></div>
+                        <div class="dot absolute left-1 top-1 dark:bg-white bg-gray-800 w-6 h-6 rounded-full transition"></div>
+                        </div>
+                        <div class="ml-3 dark:text-white text-gray-900 font-medium">
+                        Dark Mode
+                        </div>
+                    </label>
                     </div>
+                </div>
+                <script>
+                tailwind.config = {
+                darkMode: 'class',
+                }
+                </script>
+                <script>
+                if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+                document.documentElement.classList.add('dark')
+                } else {
+                document.documentElement.classList.remove('dark')
+                }
+                function darkModeListener() {
+                document.querySelector("html").classList.toggle("dark");
+                }
+                
+                document.querySelector("input[type='checkbox']#dark-toggle").addEventListener("click", darkModeListener);
+                
+                </script>
+
+
 			</div>
 		</div>
 	</div>
 
-    <!--Script for modal window-->
+        <!--Script for modal window-->
 	<script>
 
 		const modal = document.querySelector('.main-modal');
@@ -143,7 +180,6 @@
 				if (event.target == modal) modalClose();
 			}
 		}
-	
     </script>
 
 
@@ -152,24 +188,24 @@
     <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
     <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
         <div id="tabs" class="flex justify-between">
-            <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="extension-puzzle"></ion-icon>
                 <span class="tab tab-explore block text-xs">Wigets</span>
             </a>
-            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="book"></ion-icon>
                 <span class="tab tab-kategori block text-xs">Pages</span>
             </a>
-            <a href="index.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="home"></ion-icon>
                 <span class="tab tab-explore block text-xs">Home</span>
             </a>
-            <a href="#t" onclick="openModal()"
-            class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="#" onclick="openModal()"
+            class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="contrast-sharp"></ion-icon>
                 <span class="tab tab-wishlist block text-xs">Theme</span>
             </a>
-            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-400 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+            <a href="index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="search"></ion-icon>
                 <span class="tab tab-account block text-xs">Search</span>
             </a>
