--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile</title>
-    <link rel="import" href="modal.html">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/input.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -86,7 +85,8 @@
         </ul>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <div x-data="{ modelOpen: false }">
     <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
         <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
             <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
@@ -106,7 +106,7 @@
                 x-transition:leave="transition ease-in duration-200 transform"
                 x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" 
                 x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                class="inline-block w-full max-w-xl p-8 my-20 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-slate-800 rounded-xl shadow-lg"
+                class="inline-block w-full max-w-xl p-8 my-20 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-neutral-800 rounded-xl shadow-lg"
             >
                   <div class="flex items-center justify-between space-x-4">
                     <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
@@ -143,7 +143,7 @@
                     <ion-icon name="home"></ion-icon>
                     <span class="tab tab-home block text-xs">Home</span>
                 </a>
-                <a href="modal.js" @click="modelOpen =!modelOpen"
+                <a href="#" @click="modelOpen =!modelOpen"
                 class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class="tab tab-theme block text-xs">Theme</span>
