--- a/index-components.html
+++ b/index-components.html
@@ -20,7 +20,7 @@
     
 
 <!--Card-->
-<div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-neutral-800 dark:border-gray-700 mx-4 my-5">
+<div class=" overflow-hidden bg-slate-200 rounded-xl shadow-lg dark:bg-neutral-800 dark:border-gray-700 mx-4 mt-5 mb-10">
     <div class="p-5">
         <a href="components/alerts.html" class="text-gray-800 dark:text-white font-bold text-xl"><ion-icon size="small" name="notifications-outline"></ion-icon>Alerts</a>
         <hr class="bg-slate-500 dark:bg-slate-800 my-2">
