--- a/index-search.html
+++ b/index-search.html
@@ -44,50 +44,27 @@
             </div>
         </div>
 
-    <!--Modal Window-->
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-    <div x-data="{ modelOpen: false }">
-        <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-            <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
-                <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
-                    x-transition:enter="transition ease-out duration-300 transform"
-                    x-transition:enter-start="opacity-0" 
-                    x-transition:enter-end="opacity-100"
-                    x-transition:leave="transition ease-in duration-200 transform"
-                    x-transition:leave-start="opacity-100" 
-                    x-transition:leave-end="opacity-0"
-                    class="fixed inset-0 transition-opacity bg-opacity-40 backdrop-blur-md" aria-hidden="true">
-                </div>
 
-                <div x-cloak x-show="modelOpen" 
-                    x-transition:enter="transition ease-out duration-300 transform"
-                    x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95" 
-                    x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
-                    x-transition:leave="transition ease-in duration-200 transform"
-                    x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" 
-                    x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                    class="inline-block w-full max-w-xl p-8 my-32 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-neutral-800 rounded-xl shadow-lg"
-                >
-                    <div class="flex items-center justify-between space-x-4">
-                        <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
-                        <!--Close Modal Window button-->
-                        <button @click="modelOpen = false" class="text-gray-600 focus:outline-none hover:text-gray-700">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                            </svg>
-                        </button>
-                    </div>
+    <!--Empty Modal-->
+    <!--Overlay element-->
+    <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
 
-                </div>
-                    
-            </div>
-        </div>
+    <!--Modal Body-->
+    <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+    <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+    <p class="text-sm text-gray-500 px-8">
+        There is nothing here yet...
+    </p>
+    <button id="closeEmpty"
+        class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+        Cancel
+    </button>
+
+    </div>
    
 
-<!--Footer Navigation Bar-->
-<div class="w-full h-screen fixed">
-    <!-- <section id="bottom-navigation" class="md:hidden block fixed inset-x-0 bottom-0 z-10 bg-white shadow"> // if shown only tablet/mobile-->
-    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+    <!--Bottom Navigation Bar-->
+    <div id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
         <div id="tabs" class="flex justify-between">
             <a href="index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="extension-puzzle"></ion-icon>
@@ -101,7 +78,7 @@
                 <ion-icon name="home"></ion-icon>
                 <span class="tab tab-explore block text-xs">Home</span>
             </a>
-            <a href="#" @click="modelOpen =!modelOpen"
+            <a href="#" id="openEmpty"
             class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-500 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="contrast-sharp"></ion-icon>
                 <span class="tab tab-wishlist block text-xs">Theme</span>
@@ -111,12 +88,11 @@
                 <span class="tab tab-account block text-xs">Search</span>
             </a>
         </div>
-    </section>
-</div>
+    </div>
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="../path/to/flowbite/dist/flowbite.bundle.js"></script>
+    <script src="js/modals.js"></script>
 </body>
 </html>
